Fix similarity distribution that deviates from the API specification.